# deps_dyn_demo

./: Cargo.toml
.cargo/: config.toml
deps-dynamic/: Cargo.toml
deps-dynamic/src/: lib.rs
src/: lib.rs  main.rs
