[package]
name = "deps_dynamic"
version = "0.1.0"
edition = "2024"

[dependencies]
#polars = { version = "0.50.0", features = ["full"] }
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }

[lib]
crate-type = ["dylib"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3
