[package]
name = "deps_dynamic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
#polars = { version = "0.50.0", features = ["full"] }
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }

futures-core ="0.3.31"
futures-sink ="0.3.31"
futures-channel ="0.3.31"
futures-util ="0.3.31"
futures-task ="0.3.31"

[lib]
crate-type = ["dylib"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3
